setting up base theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
 ---
 ---
-{% assign theme_asset_path = "/assets/themes/the-minimum" %}
-{% include themes/the-minimum/default.html %}
+{% assign theme_asset_path = "/assets/themes/base" %}
+{% include themes/base/default.html %}
