--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,50 +24,10 @@ h4 {
 h5 {
 	font-size:100%;
 }
-#header {
-	height:120px;
+#container {
+	padding-top:120px;
+	background:url(../images/css-quik.png) no-repeat center center;
 }
-	#header #logo {
-		width:100%;
-		height:100px;
-		text-align:center;
-		margin:0;
-		padding:10px 0;
-	}
-	#header #logo a {
-		width:400px;
-		height:100px;
-		display:block;
-		margin:0 auto;
-		text-indent:-5000px;
-		background:url(../images/css-quik.png) no-repeat center center;
-	}
-#main-content {
-	overflow:auto;
-}
-	.two .menu {
-		margin:20px 0;
-	}
-	.three .menu {
-		margin:25px 0;
-		text-align:center;
-	}
-	.menu li {
-		padding:0 25px 0 0;
-	}
-	#column-one .menu li {
-		width:100%;
-	}
-	.menu li a {
-		color:#333;
-	}
-	#column-three p {
-		font-size:80%;
-		font-family:Arial, Helvetica, sans-serif;
-	}
-#footer {
-	text-align:right;
-	margin-top:20px;
-	padding-top:10px;
-	border-top:1px solid #333;
+.download {
+	float:right;
 }
