--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,80 +1,249 @@
 @charset "utf-8";
-/** base.css contains the reset to even out cross-browser display**/
-@import "base.css";
-/** helpers.css contains helper classes - documentation: http://cssquik.com/docs **/
-@import "helpers.css";
-/** columns.css contains the column styles **/
-@import "columns.css";
-/** Style like you normally would. **/
+/* Reset */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+a img,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+}
+/* Miscellaneous conveniences: */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+pre,
+blockquote,
+ul,
+ol,
+dl,
+address {
+  margin: .5em 0;
+  padding: 0;
+}
+p,
+pre,
+blockquote,
+ul,
+ol,
+dl,
+address {
+  line-height: 150%;
+}
+li, dd, blockquote {
+  margin-left: 1em;
+}
+form label {
+  cursor: pointer;
+}
+fieldset {
+  border: none;
+}
+input, select, textarea {
+  font-size: 100%;
+  font-family: inherit;
+}
+em {
+  font-style: italic;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  font-weight: bold;
+}
+/* Helpers */
+ul.menu {
+  margin: 0;
+  list-style: none;
+  float: left;
+  display: inline;
+  width: 100%;
+}
+ul.menu li {
+  margin: 0;
+  list-style: none;
+  float: left;
+  display: inline;
+}
+ul.menu li a {
+  float: left;
+  display: inline;
+  text-decoration: none;
+  width: 100%;
+  line-height: 100%;
+}
+ul.menu li a:hover {
+  text-decoration: underline;
+}
+.no-left {
+  padding-left: 0;
+  margin-left: 0;
+}
+.no-right {
+  padding-right: 0;
+  margin-right: 0;
+}
+.float-l {
+  float: left;
+  display: inline;
+}
+.float-r {
+  float: left;
+  display: inline;
+}
+.full {
+  width: 100%;
+}
+.half {
+  width: 50%;
+}
+.third {
+  width: 33%;
+}
+.two-third {
+  width: 67%;
+}
+/** Site Specific **/
 html {
-	background:url(../images/bg-body.png) repeat-x top left;
-	text-align:center;
+  background: url(../images/bg-body.png) repeat-x top left;
+  text-align: center;
 }
 body {
-	width:960px;
-	margin:0 auto;
-	text-align:left;
-	font-family:Georgia, "Times New Roman", Times, serif;
-} 
+  width: 960px;
+  margin: 0 auto;
+  text-align: left;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: '#333';
+}
 h1 {
-	font-size:200%;
+  font-size: 200%;
 }
 h2 {
-	font-size:175%;
+  font-size: 175%;
 }
 h3 {
-	font-size:150%;
+  font-size: 150%;
 }
 h4 {
-	font-size:125%;
+  font-size: 125%;
 }
 h5 {
-	font-size:100%;
+  font-size: 100%;
 }
 #header {
-	height:120px;
+  height: 120px;
 }
-	#header #logo {
-		width:100%;
-		height:100px;
-		text-align:center;
-		margin:0;
-		padding:10px 0;
-	}
-	#header #logo a {
-		width:400px;
-		height:100px;
-		display:block;
-		margin:0 auto;
-		text-indent:-5000px;
-		background:url(../images/css-quik.png) no-repeat center center;
-	}
+#header #logo {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  margin: 0;
+  padding: 10px 0;
+}
+#header #logo a {
+  width: 400px;
+  height: 100px;
+  display: block;
+  margin: 0 auto;
+  text-indent: -5000px;
+  background: url(../images/css-quik.png) no-repeat center center;
+}
 #main-content {
-	overflow:auto;
+  overflow: auto;
 }
-	.two .menu {
-		margin:20px 0;
-	}
-	.three .menu {
-		margin:25px 0;
-		text-align:center;
-	}
-	.menu li {
-		padding:0 25px 0 0;
-	}
-	#column-one .menu li {
-		width:100%;
-	}
-	.menu li a {
-		color:#333;
-	}
-	#column-three p {
-		font-size:80%;
-		font-family:Arial, Helvetica, sans-serif;
-	}
+.two .menu {
+  margin: 20px 0;
+}
+.three .menu {
+  margin: 25px 0;
+  text-align: center;
+}
+.menu li {
+  padding: 0 25px 0 0;
+}
+#column-one .menu li {
+  width: 100%;
+}
+.menu li a {
+  color: '#333';
+}
+#column-three p {
+  font-size: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+}
 #footer {
-	text-align:right;
-	margin-top:20px;
-	padding-top:10px;
-	border-top:1px solid #333;
+  text-align: right;
+  margin-top: 20px;
+  padding-top: 10px;
+  border-top: 1px solid '#333';
 }
