--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -1,52 +1,52 @@
-@charset "utf-8";
+/* Helpers */
 ul.menu {
-	margin:0;
-	list-style:none;
-	float:left;
-	display:inline;
-	width:100%;
+  margin: 0;
+  list-style: none;
+  float: left;
+  display: inline;
+  width: 100%;
 }
-	ul.menu li {
-		margin:0;
-		list-style:none;
-		float:left;
-		display:inline;
-	}
-		ul.menu li a {
-			float:left;
-			display:inline;
-			text-decoration:none;
-			width:100%;
-			line-height:100%;
-		}
-		ul.menu li a:hover {
-			text-decoration:underline;
-		}
+ul.menu li {
+  margin: 0;
+  list-style: none;
+  float: left;
+  display: inline;
+}
+ul.menu li a {
+  float: left;
+  display: inline;
+  text-decoration: none;
+  width: 100%;
+  line-height: 100%;
+}
+ul.menu li a:hover {
+  text-decoration: underline;
+}
 .no-left {
-	padding-left:0;
-	margin-left:0;
+  padding-left: 0;
+  margin-left: 0;
 }
 .no-right {
-	padding-right:0;
-	margin-right:0;
+  padding-right: 0;
+  margin-right: 0;
 }
 .float-l {
-	float:left;
-	display:inline;
+  float: left;
+  display: inline;
 }
 .float-r {
-	float:left;
-	display:inline;
+  float: left;
+  display: inline;
 }
 .full {
-	width:100%;
+  width: 100%;
 }
 .half {
-	width:50%;
+  width: 50%;
 }
 .third {
-	width:33%;
+  width: 33%;
 }
 .two-third {
-	width:67%;
+  width: 67%;
 }
