--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,49 +1,155 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, a img, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	border-collapse:collapse;
-	border-spacing:0;
-	outline: 0;
-	font-weight: inherit;
-	font-style: inherit;
-	font-size: 100%;
-	font-family: inherit;
+/* Reset */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  font-family: inherit;
 }
-/* Miscellaneous conveniences: */
-h1, h2, h3, h4, h5, h6, p, pre, 
-blockquote, ul, ol, dl, address { 
-	margin:.5em 0; 
-	padding: 0; 
-}
-p, pre, blockquote, ul, ol, dl, address {
-	line-height:150%;
-}
-li, dd, blockquote { 
-	margin-left: 1em; 
-}    
-form label {
-	cursor: pointer;
-}
-fieldset {
-	border: none;
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 input, select, textarea {
-	font-size: 100%;
-	font-family: inherit;
+  font-size: 100%;
+  font-family: inherit;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+/* Miscellaneous conveniences: */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+pre,
+blockquote,
+ul,
+ol,
+dl,
+address {
+  margin: .75em 0;
+  padding: 0;
+}
+p,
+pre,
+blockquote,
+ul,
+ol,
+dl,
+address {
+  line-height: 140%;
+}
+li, dd, blockquote {
+  margin-left: 1em;
+}
+form label {
+  cursor: pointer;
 }
 em {
-	font-style:italic;
+  font-style: italic;
 }
-h1, h2, h3, h4, h5, h6, strong {
-	font-weight:bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong,
+b {
+  font-weight: bold;
 }
 html {
 	background:url(../images/bg-body.png) repeat-x top left;
